--- a/.env
+++ b/.env
@@ -5,5 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://neondb_owner:npg_MbWLqf6Z0IEQ@ep-solitary-water-a51qowi4-pooler.us-east-2.aws.neon.tech/neondb?sslmode=require"
-NEXT_PUBLIC_GEMINI_API_KEY="AIzaSyDJEaYVzmGvzRW9TCPpBcwbjIUvq7Copq0"
-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
+GROQ_API_KEY ="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"
