--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+     "groq-sdk": "^1.0.1",  
+    "@meta/llama-ai": "^0.1.9" ,
     "@google-cloud/speech": "^6.7.0",
     "@google/generative-ai": "^0.22.0",
     "@hookform/resolvers": "^3.9.1",
