--- a/package.json
+++ b/package.json
@@ -3,17 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "concurrently \"next dev\" \"npx electron .\"",
+    "build": "next build && next export",
+    "start": "next start"
   },
-  "dependencies": { 
-     "groq-sdk": "^1.0.1",  
-    "@meta/llama-ai": "^0.1.9" ,
-    "@google-cloud/speech": "^6.7.0",
+  "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "@google-cloud/speech": "^6.7.1",
+    "@google-cloud/storage": "^7.15.2",
+    "@google-cloud/vision": "^5.1.0",
     "@google/generative-ai": "^0.22.0",
     "@hookform/resolvers": "^3.9.1",
+    "@langchain/community": "^0.3.35",
+    "@langchain/google-genai": "^0.1.11",
     "@prisma/client": "^6.4.1",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.4",
@@ -43,16 +45,28 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@tensorflow-models/speech-commands": "^0.5.4",
+    "@tensorflow-models/universal-sentence-encoder": "^1.3.3",
+    "@tensorflow/tfjs": "^4.22.0",
+    "@types/formidable": "^3.4.5",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
+    "concurrently": "^9.1.2",
     "date-fns": "^2.30.0",
+    "dotenv": "^16.4.7",
+    "electron": "^35.0.0",
     "embla-carousel-react": "8.5.1",
+    "fluent-ffmpeg": "^2.1.3",
+    "formidable": "^3.5.2",
+    "framer-motion": "^12.4.7",
+    "groq-sdk": "^0.19.0",
     "input-otp": "1.4.1",
     "jspdf": "^3.0.0",
+    "langchain": "^0.3.19",
     "lucide-react": "^0.454.0",
-    "next": "14.2.16",
+    "next": "^14.2.24",
     "next-themes": "^0.4.4",
     "prisma": "^6.4.1",
     "react": "^18",
@@ -68,7 +82,10 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@types/d3-color": "^3.1.3",
+    "@types/d3-path": "^3.1.1",
     "@types/node": "^22",
+    "@types/prop-types": "^15.7.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8",
